# Rasterizer-CPU

./: README_EN.md  Readme.md
CpuRasterizer/: CMakeLists.txt  Concept.graphml
CpuRasterizer/Core/GUI/: GraphicsTest.c  Window.c
CpuRasterizer/Core/GUITest/: GraphicsTest.c  TestWindow.h  Window.c
CpuRasterizer/Core/Graphics/: FragmentShader.c  GraphicalContext.h  Math.c  Rasterizer.c  Rasterizer.h  VertexShader.c
CpuRasterizer/Core/Rasterizator/: CPURasterizerGlobal.h  CPURasterizerLocal.h  FragmentShader.c  GraphicalContextGlobal.h  GraphicalContextLocal.h  Loader.c  Math.c  Math.h  Rasterizer.c  SL.h  Texture.c  VertexShader.c
CpuRasterizer/about/: Concept.graphml
about/: SYNOPSIS_SCHEME.graphml
